--- a/index.html
+++ b/index.html
@@ -16,9 +16,48 @@
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       </nav>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
     </header>
+    <!-- main -->
+    <main>
+      <!-- section-1 -->
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+      <!-- section-2 -->
+      <section>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li><img src="./image/sec1-img1.jpg" alt="человек кодит на пк" /></li>
+          <li><img src="./image/sec1-img2.jpg" alt="девушка сидит в ноутбуке" /></li>
+          <li><img src="./image/sec1-img3.jpg" alt="девушка работает с палитрой" /></li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
