--- a/index.html
+++ b/index.html
@@ -53,9 +53,51 @@
         </ul>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><img src="./image/sec1-img1.jpg" alt="человек кодит на пк" /></li>
-          <li><img src="./image/sec1-img2.jpg" alt="девушка сидит в ноутбуке" /></li>
-          <li><img src="./image/sec1-img3.jpg" alt="девушка работает с палитрой" /></li>
+          <li>
+            <img src="./image/sec1-img1.jpg" alt="человек кодит на пк" width="370" height="294" />
+          </li>
+          <li>
+            <img
+              src="./image/sec1-img2.jpg"
+              alt="девушка сидит в ноутбуке"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./image/sec1-img3.jpg"
+              alt="девушка работает с палитрой"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+      <!-- section-3 -->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="/image/worker-man-1.jpg" alt="мужчина в очках" width="270" height="260" />
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img src="/image/worker-woman.jpg" alt="девушка в очках" width="270" height="260" />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="/image/worker-man-2.jpg" alt="парень" width="270" height="260" />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img src="/image/worker-man-3.jpg" alt="парень в очках" width="270" height="260" />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
         </ul>
       </section>
     </main>
