--- a/index.html
+++ b/index.html
@@ -101,5 +101,13 @@
         </ul>
       </section>
     </main>
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <address>
+        г. Киев, пр-т Леси Украинки, 26<br />
+        <a href="mailto:info@example.com">info@example.com</a> <br />
+        <a href="tel:+380991111111">+38 099 111 11 11</a>
+      </address>
+    </footer>
   </body>
 </html>
