--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <!-- main -->
     <main>
@@ -29,6 +31,7 @@
       </section>
       <!-- section-2 -->
       <section>
+        <h2></h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
@@ -51,6 +54,9 @@
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
+      </section>
+      <!-- section-3 -->
+      <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
@@ -74,39 +80,47 @@
           </li>
         </ul>
       </section>
-      <!-- section-3 -->
+      <!-- section-4 -->
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="/image/worker-man-1.jpg" alt="мужчина в очках" width="270" height="260" />
+            <img src="./image/worker-man-1.jpg" alt="мужчина в очках" width="270" height="260" />
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="/image/worker-woman.jpg" alt="девушка в очках" width="270" height="260" />
+            <img src="./image/worker-woman.jpg" alt="девушка в очках" width="270" height="260" />
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="/image/worker-man-2.jpg" alt="парень" width="270" height="260" />
+            <img src="./image/worker-man-2.jpg" alt="парень" width="270" height="260" />
             <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="/image/worker-man-3.jpg" alt="парень в очках" width="270" height="260" />
+            <img src="./image/worker-man-3.jpg" alt="парень в очках" width="270" height="260" />
             <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+    <!-- footer -->
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
-        г. Киев, пр-т Леси Украинки, 26<br />
-        <a href="mailto:info@example.com">info@example.com</a> <br />
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <ul>
+          <li>
+            <a
+              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
